bugfix: fix header overflow for all display sizes

--- a/grails-app/assets/bower/bootstrap/bootstrap.custom.css
+++ b/grails-app/assets/bower/bootstrap/bootstrap.custom.css
@@ -4328,9 +4328,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling: touch;
 }
-.navbar-collapse.in {
+/* .navbar-collapse.in {
     overflow-y: auto;
-}
+} */
+
 @media (min-width: 1000px) {
     .navbar-collapse {
         width: auto;
@@ -4346,6 +4347,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     }
     .navbar-collapse.in {
         overflow-y: visible;
+        clear: none;
     }
     .navbar-fixed-top .navbar-collapse,
     .navbar-static-top .navbar-collapse,
